--- a/index.html
+++ b/index.html
@@ -103,4 +103,7 @@
   <p class="topcontent">Are you learning CSS?</p>
   <!-- WILL match -->
   <p class="top-text">Hello world!</p>
+
+  <!-- Box Model -->
+  <p class="box-model">Krisna Firdaus</p>
 </html>
